# ChangeLog for dev-java/java-config
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.34 2003/12/07 18:08:45 strider Exp $

*java-config-1.1.7 (07 Dec 2003)

  07 Dec 2003; Adrian Almenar <strider@gentoo.org> java-config-1.1.7.ebuild:
  After a month without problems, moving to stable.

  16 Nov 2003; Adrian Almenar <strider@gentoo.org> java-config-1.1.5.ebuild:
  java-config 1.1.5 moved to stable.

*java-config-1.1.5 (08 Nov 2003)

  08 Nov 2003; Adrian Almenar <strider@gentoo.org> :
  New Release, fixes bugs #19032, #20559, #26457, #32992, #31747.

*java-config-1.1.3 (07 Nov 2003)

  07 Nov 2003; Adrian Almenar <strider@gentoo.org> java-config-1.1.3.ebuild:
  Fixes bug #31924.

*java-config-1.1.2 (05 Nov 2003)

  05 Nov 2003; Adrian Almenar <strider@gentoo.org> java-config-1.1.2.ebuild:
  Fixes bug #32611.

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org>
  java-config-0.2.8-r2.ebuild:
  set ppc in keywords

*java-config-1.1.1 (19 Oct 2003)

  19 Oct 2003; Adrian Almenar <strider@gentoo.org> java-config-1.1.1.ebuild:
  Fixed some errors that breaked backward compatibility

*java-config-1.1.0 (18 Oct 2003)

  18 Oct 2003; Adrian Almenar <strider@gentoo.org> java-config-1.1.0.ebuild:
  New java-config python version, made by Jason Mobarak <aether@gentoo.org>.

  15 Oct 2003; Brad House <brad_mssw@gentoo.org> java-config-0.2.8-r2.ebuild:
  stable on amd64

  07 Oct 2003; Brad House <brad_mssw@gentoo.org> java-config-0.2.8-r2.ebuild:
  add ~amd64 keyword

*java-config-0.2.8-r2 (23 Aug 2003)

  23 Aug 2003; Adrian Almenar <strider@gentoo.org> java-config-0.2.8-r2.ebuild,
  files/0.2.8/java-config:
  Revision Bump for some bug fixes

*java-config-0.2.8-r1 (15 Aug 2003)

  15 Aug 2003; Adrian Almenar <strider@gentoo.org> java-config-0.2.8-r1.ebuild,
  files/0.2.8/java-config:
  Revision bump so people get the latest java-config, Fixed bug 20436.
