@@ -1,9 +1,9 @@
-MD5 4a6a7b79275d49abc3addfc56f146c8b java-config-1.1.8.ebuild 653
-MD5 4c94bd7992ab28115bcdeeffd3847492 java-config-1.1.5.ebuild 665
-MD5 bc4bf4239b70c35e1ba7da1f30542ea7 java-config-1.1.7.ebuild 665
-MD5 e9bf2073d57212661ab17fd57a1b0610 java-config-0.2.8-r2.ebuild 637
-MD5 4a6a7b79275d49abc3addfc56f146c8b java-config-1.2.0.ebuild 653
-MD5 34ccdc8060e9a9b72d4276d3fc4237f9 ChangeLog 7054
+MD5 d3ea4af7c57c07dd10210cd6f31af98b java-config-1.1.8.ebuild 652
+MD5 7f3198dfadcb870ac03561aeccf22914 java-config-1.1.5.ebuild 664
+MD5 5c1de713bc98821779867c3a656ef036 java-config-1.1.7.ebuild 664
+MD5 a2c5861cf2362ffea80fc50f07f125d5 java-config-0.2.8-r2.ebuild 632
+MD5 ae995f65a96601733027f155b1cd5bec java-config-1.2.0.ebuild 652
+MD5 88df7127eb49555e4f63169cda74de1c ChangeLog 7053
 MD5 f5edf1fc3825acc2025f959d8b0a1036 metadata.xml 914
 MD5 aba83541547f68873ac391359b455646 files/digest-java-config-1.1.5 68
 MD5 eb687d10f2dd2dd19763963682437177 files/digest-java-config-1.1.7 68
