@@ -1,0 +1,1 @@
+MD5 760364cceb8d71d7c7375411c641bbbb java-config-1.1.8.tar.bz2 10826
