@@ -1,0 +1,1 @@
+MD5 f5f34f3ba4383d6b7aa963c5835702da java-config-1.2.0.tar.bz2 12016
